Removido link da pasta de fotos

--- a/sistematicacao.html
+++ b/sistematicacao.html
@@ -20,7 +20,7 @@
 	<p> Os jogos possuem uma duração definida, em geral de 12 a 15minutos por partida. E se não houver um vencedor neste tempo, os juízes encerram a partida, para reiniciar, trocando os times de lado e os jogadores recarregarem o gás e as bolinhas.</p>
 	
 	<div class="imagem">
-            <img src="fotos\base1.jpg" alt="Base 1" width="480">
+            <img src="base1.jpg" alt="Base 1" width="480">
         </div>
 	<br>
 	
@@ -35,7 +35,7 @@
 	</ul>
 	
 	<div class="imagem">
-            <img src="fotos\kit_basico.jpg" alt="Kit Básico" width="480">
+            <img src="kit_basico.jpg" alt="Kit Básico" width="480">
         </div>
 	<br>
 	
@@ -50,12 +50,12 @@
 	<h2> <p> 1. O Coordenador - Wang </p></h2> 
 	<p> Esportista, adepto do esporte com mais de 12 anos de prática, começando pelos jogos recreativos e depois participando de competições Nacionais e Internacionais. Realizou diversos eventos recreativos e organizou competições regionais também. </p>
 	<div class="imagem">
-            <img src="fotos\wang.jpg" alt="Coordenador" width="480">
-            <img src="fotos\cenario.jpg" alt="Jogo_cenario" width="480">
+            <img src="wang.jpg" alt="Coordenador" width="480">
+            <img src="cenario.jpg" alt="Jogo_cenario" width="480">
         </div>
 	<div class="imagem">
-            <img src="fotos\torneio_sp.jpg" alt="Torneio em SP" width="480">
-			<img src="fotos\em_jogo.bmp" alt="Foto durante um jogo" width="480">
+            <img src="torneio_sp.jpg" alt="Torneio em SP" width="480">
+			<img src="em_jogo.bmp" alt="Foto durante um jogo" width="480">
         </div>
 
 	<br> </br>
@@ -64,8 +64,8 @@
 	<p> Os Rangers ou Juízes, são os responsáveis por orientar, coordenar os jogos e apoiar os jogadores durante os jogos, evitando acidentes, verificando quando um jogador é atingido ou verificar a pedido de outro jogador que tenha disparado nele. </p>
 	
 	<div class="imagem">
-            <img src="fotos\rangers.jpg" alt="Equipe de Rangers" width="480">
-            <img src="fotos\crony_radar.jpg" alt="Equipamento de segurança" width="480">
+            <img src="rangers.jpg" alt="Equipe de Rangers" width="480">
+            <img src="crony_radar.jpg" alt="Equipamento de segurança" width="480">
         </div>
 	<br>
 	
