Ajustes em espaçamentos após ajuste de cor CSS e imagem de fundo.

--- a/sistematicacao.html
+++ b/sistematicacao.html
@@ -5,7 +5,7 @@
 <head> 
 	<title>Xtreme Paintball</title>
 	<meta charset="uft-8">
-	<link rel="stylesheet" href="estilo.css">
+	<link rel="stylesheet" href="stilo.css">
 	
 	</head>
 
@@ -24,7 +24,7 @@
         </div>
 	<br>
 	
-	<br> </br>
+	<br> </br> <br> </br> <br> </br> <br> </br> <br> </br>
 	<h2> Equipamento básico </h2> 
 	<p> O equipamento padrão é composto por: </p>
 	<ul> 
@@ -45,6 +45,7 @@
 	<h2> Contato: </h2> 
 	<p> E-mail: contato@xtremepb.com.br   </p> 
 	
+	<br> </br><br> </br><br> </br><br> </br> <br> </br>
 		
 	<h1> A Equipe </h1> 
 	<h2> <p> 1. O Coordenador - Wang </p></h2> 
@@ -69,7 +70,7 @@
         </div>
 	<br>
 	
-	<br> </br>
+	<br> </br> <br> </br> <br> </br> <br> </br> <br> </br> <br> </br><br> </br><br> </br><br> </br> <br> </br>
 	
 	<h1>3. Cadastro</h1>
 	<h3>Quer receber novidades, informes de eventos ou participar de promoções ? Cadastre-se! </h3>
